versions/v4.2.0/doxygen/html/group__math__dsp.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/group__math__dsp.html
original_path: doxygen/html/group__math__dsp.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

DSP (Digital Signal Processing)

[Utilities](group__utilities.md)

Digital Signal Processing (DSP) math functions and utilities.
[More...](#details)

| Topics | |
| --- | --- |
|  | [Basic Math Functions](group__math__dsp__basic.md) |
|  | Basic element-wise math operations for DSP. |
|  | [Float/Fixed point shift conversion functions](group__math__dsp__utils__shifts.md) |
|  | Convert number representation in Float or Double to/from Q31/Q15/Q7. |
|  | [Helper macros for printing Q values.](group__math__printing.md) |
|  | Extends the existing inttypes headers for print formatting. |

| Typedefs | |
| --- | --- |
| typedef [int8\_t](stdint_8h.md#accbd6432732c88ad6adc5365800433b6) | [q7\_t](#gae541b6f232c305361e9b416fc9eed263) |
|  | 8-bit fractional data type in 1.7 format. |
| typedef [int16\_t](stdint_8h.md#afe270aee8d96ad7f279a4020b9d58bdf) | [q15\_t](#gab5a8fb21a5b3b983d5f54f31614052ea) |
|  | 16-bit fractional data type in 1.15 format. |
| typedef [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [q31\_t](#gadc89a3547f5324b7b3b95adec3806bc0) |
|  | 32-bit fractional data type in 1.31 format. |
| typedef [int64\_t](stdint_8h.md#ac714c0d2c1a4adb10e73cab29623314b) | [q63\_t](#ga5aea1cb12fc02d9d44c8abf217eaa5c6) |
|  | 64-bit fractional data type in 1.63 format. |
| typedef \_\_fp16 | [float16\_t](#gaa94dc44bddb5718a22bb612890a7fe9f) |
|  | 16-bit floating point type definition. |
| typedef float | [float32\_t](#ga4611b605e45ab401f02cab15c5e38715) |
|  | 32-bit floating-point type definition. |
| typedef double | [float64\_t](#gac55f3ae81b5bc9053760baacf57e47f4) |
|  | 64-bit floating-point type definition. |

## Detailed Description

Digital Signal Processing (DSP) math functions and utilities.

Since
:   3.3

Version
:   0.1.0

## Typedef Documentation

## [◆ ](#gaa94dc44bddb5718a22bb612890a7fe9f)float16\_t

| typedef \_\_fp16 [float16\_t](#gaa94dc44bddb5718a22bb612890a7fe9f) |
| --- |

`#include <[zephyr/dsp/types.h](include_2zephyr_2dsp_2types_8h.md)>`

16-bit floating point type definition.

## [◆ ](#ga4611b605e45ab401f02cab15c5e38715)float32\_t

| typedef float [float32\_t](#ga4611b605e45ab401f02cab15c5e38715) |
| --- |

`#include <[zephyr/dsp/types.h](include_2zephyr_2dsp_2types_8h.md)>`

32-bit floating-point type definition.

## [◆ ](#gac55f3ae81b5bc9053760baacf57e47f4)float64\_t

| typedef double [float64\_t](#gac55f3ae81b5bc9053760baacf57e47f4) |
| --- |

`#include <[zephyr/dsp/types.h](include_2zephyr_2dsp_2types_8h.md)>`

64-bit floating-point type definition.

## [◆ ](#gab5a8fb21a5b3b983d5f54f31614052ea)q15\_t

| typedef [int16\_t](stdint_8h.md#afe270aee8d96ad7f279a4020b9d58bdf) [q15\_t](#gab5a8fb21a5b3b983d5f54f31614052ea) |
| --- |

`#include <[zephyr/dsp/types.h](include_2zephyr_2dsp_2types_8h.md)>`

16-bit fractional data type in 1.15 format.

## [◆ ](#gadc89a3547f5324b7b3b95adec3806bc0)q31\_t

| typedef [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) [q31\_t](#gadc89a3547f5324b7b3b95adec3806bc0) |
| --- |

`#include <[zephyr/dsp/types.h](include_2zephyr_2dsp_2types_8h.md)>`

32-bit fractional data type in 1.31 format.

## [◆ ](#ga5aea1cb12fc02d9d44c8abf217eaa5c6)q63\_t

| typedef [int64\_t](stdint_8h.md#ac714c0d2c1a4adb10e73cab29623314b) [q63\_t](#ga5aea1cb12fc02d9d44c8abf217eaa5c6) |
| --- |

`#include <[zephyr/dsp/types.h](include_2zephyr_2dsp_2types_8h.md)>`

64-bit fractional data type in 1.63 format.

## [◆ ](#gae541b6f232c305361e9b416fc9eed263)q7\_t

| typedef [int8\_t](stdint_8h.md#accbd6432732c88ad6adc5365800433b6) [q7\_t](#gae541b6f232c305361e9b416fc9eed263) |
| --- |

`#include <[zephyr/dsp/types.h](include_2zephyr_2dsp_2types_8h.md)>`

8-bit fractional data type in 1.7 format.

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.2.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
